fixed failing tests